Thur Jun 3 9:06:00 CST 1999 Seth Burgess <sjburges@gimp.org>

	* plug-ins/script-fu/scripts/drop-shadow.scm: you can't
	use gimp-edit-fill until you've attached the drawable to 
	an image.
	
Thur Jun 3 1:43:00 CST 1999 Seth Burgess <sjburges@gimp.org>

	* app/indicator_area.[ch]
	* app/devices.c: Added a pattern preview and its popup.  This
	needs some GUI work still, as they are just way too big in a 
	general case.

Wed Jun  2 23:13:30 CST 1999 Seth Burgess <sjburges@gimp.org>

	* app/indicator_area.c : Added popup previews if the brush is bigger
	than the indicator area.

Wed Jun  2 19:43:30 CST 1999 Seth Burgess <sjburges@gimp.org>
	
	* TODO: Removed entries that have been accomplished.  Still
	lots in there for an eager hacker (of just about any skill level)

Wed Jun  2 16:53:30 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/docindex.c: remove unused var

	* app/gimprc_cmds.c
	* tools/pdbgen/pdb/gimprc.pdb: propagate the May 21 change to the
	pdb file

	* tools/pdbgen/pdb/{channel,gimage,layer}.pdb: don't be sloppy in
	the face of fickle perls

1999-06-03  Tor Lillqvist  <tml@iki.fi>

	* app/about_dialog.c (about_dialog_load_logo): As we open the ppm
	file in binary mode, we shouldn't assume that the header lines
	read with fgets end with just a '\n'.

1999-06-02  Seth Burgess <sjburges@gimp.org>

	* app/Makefile.am : Added new Files, indicator_area.[ch]

	* app/devices.c
	* app/interface.c
	* app/indicator_area.[ch] : Added a brush preview in the toolbar.  
	Still needs a full size preview, and could use a patterns and a 
	gradient next to it :)  These will happen, relatively soon.

	Thanks to the KDE guy (Torsten Rahn) on the gimp-devel mailing list 
	that gave the idea for this by pointing out that it wasn't easy 
	to find the size of the brush.  It seems obvious now.

1999-06-02  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/disp_callbacks.c
	* app/gimpset.[ch]
	* app/gimpsetP.h
	* app/layers_dialog.c: applied Simon's <Simon.Budig@unix-ag.org>